# server

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini  tox.ini
.github/: pull_request_template.md
.github/actions/envsetup/: action.yml
.github/agents/: pytest-specialist.agent.md
.github/workflows/: build-test-publish.yml  clean-ghcr.yml  feature-branch-test.yml  pull-request.yml  release.yml  test-template.yml
api/: settings.py
api/graphql/: views.py
api/v1/: schema.py
apps/authx/: admin.py  apps.py  hashers.py  models.py  serializers.py  services.py  views.py
apps/authx/api/: mutations.py  types.py
apps/authx/api/v1/: mutations.py  schema.py  types.py
apps/authx/migrations/: 0001_initial.py  0002_user_hint.py  0003_usersymmetrickey.py  0005_refreshtoken.py
apps/authx/tests/: conftest.py  factories.py  test_api.py  test_auth_view.py  test_graphql_api.py  test_logout_view.py  test_views.py
apps/cipher/: admin.py  apps.py  models.py  services.py
apps/cipher/api/v1/: mutations.py  queries.py  schema.py  types.py
apps/cipher/migrations/: 0001_initial.py
apps/conf/: asgi.py  settings.py  wsgi.py
apps/core/: utils.py
apps/core/graphql/: permissions.py
apps/core/utils/: http.py
apps/jwt/: admin.py  apps.py  models.py  services.py  tasks.py  views.py
apps/jwt/api/v1/: mutations.py  schema.py
apps/jwt/migrations/: 0001_initial.py  0002_refreshtoken_replaced_by.py  0003_rename_jti_refreshtoken_refresh_token_id.py  0004_alter_refreshtoken_replaced_by.py  0005_alter_refreshtoken_replaced_by.py
apps/jwt/tests/: factories.py  test_jwt_tokens.py  test_refresh_token_view.py  test_tasks.py
authx/: models.py
authx/migrations/: 0001_initial.py
config/: asgi.py  base.py  celery.py  production.py  settings.py  test.py  urls.py  wsgi.py
config/envs/: .django.env
deploy/common/: entrypoint  start_huey_consumer
deploy/dev/: start_beat  start_web  start_worker
deploy/prod/: start_web  start_worker
mp/: cloudflare.py  crypto.py  emailing.py
mp/apps/authx/: admin.py  apps.py  hashers.py  models.py  serializers.py  services.py  urls.py  views.py
mp/apps/authx/migrations/: 0006_user_verified.py  0009_alter_emailverificationtoken_active_and_more.py  0011_alter_user_is_active.py  0012_alter_user_password_and_more.py  0013_alter_userecc_key_alter_userecc_pub.py  0014_rsaoaepkey_delete_userecc.py
mp/apps/authx/tests/: conftest.py  factories.py  test_account_setup_view.py  test_account_verify_view.py  test_account_view.py  test_check_email_view.py  test_login_view.py  test_logout_view.py  test_models.py  test_services.py  test_unlock_view.py
mp/apps/cipher/: admin.py  apps.py  models.py  services.py  tasks.py
mp/apps/cipher/graphql/: mutations.py  queries.py  schema.py  types.py
mp/apps/cipher/migrations/: 0001_initial.py  0002_cipherlogindata_authenticator_key.py  0003_cipherdatabasedata_alter_cipher_type.py  0004_cipher_delete_on_cipher_status.py  0006_alter_cipher_is_favorite_alter_cipher_status.py  0007_cipherdatacard_alter_cipher_type.py  (+1 more)
mp/authx/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
mp/authx/migrations/: 0003_user_protected_symmetric_key.py  0004_alter_user_protected_symmetric_key.py  0005_userecc.py  0007_emailverificationtoken.py  0008_alter_emailverificationtoken_expiry.py  0010_alter_emailverificationtoken_expiry.py  0012_alter_user_password_and_more.py
mp/authx/tests/: conftest.py  factories.py  test_account_setup_view.py  test_account_verify_view.py  test_account_view.py  test_auth_view.py  test_check_email_view.py  test_login_view.py  test_logout_view.py  test_services.py  test_unlock_view.py
mp/cipher/: admin.py  apps.py  models.py  services.py  tasks.py
mp/cipher/graphql/: mutations.py  queries.py  schema.py  types.py
mp/cipher/migrations/: 0002_cipher_is_favorite.py  0003_alter_cipher_key.py  0005_alter_cipher_key_alter_cipher_name_and_more.py
mp/cipher/tests/: factories.py  test_graphql.py  test_services.py  test_tasks.py
mp/config/: asgi.py  base.py  local.py  production.py  test.py  urls.py  wsgi.py
mp/core/: exceptions.py
mp/core/graphql/: permissions.py  views.py
mp/core/middleware/: jwt.py
mp/core/model/: fields.py
mp/core/strawberry/: test.py
mp/core/utils/: http.py  ip.py
mp/graphql/: schema.py  urls.py  views.py
mp/jwt/: admin.py  apps.py  models.py  services.py  tasks.py  views.py
mp/jwt/migrations/: 0001_initial.py
mp/jwt/tests/: factories.py  test_jwt_tokens.py  test_refresh_token_view.py  test_tasks.py
mp/templates/vault/: base.html  index.html  login.html
mp/tests/: test_cloudflare.py
mp_graphql/: views.py
mpgraphql/: schema.py
rabbitmq/: definitions.json  rabbitmq.conf
redis/: redis.conf
scripts/dev/: analysischeck  autoformat  check_missing_migrations  staticcheck
scripts/dev/server/: start
scripts/pre-commit/: warn_missing_migrations
templates/emails/: verification_email.html
(+11 files in other folders)
