[tool.poetry]
name = "mellonpass"
version = "0.1.0"
description = "API For MellonPass UI."
authors = ["Roel Delos Reyes <badcoder28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
strawberry-graphql = "^0.237.3"
django-environ = "^0.11.2"
django-extensions = "^3.2.3"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.1"
isort = "^5.13.2"
flake8 = "^7.1.1"
django-stubs = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
